--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/dbprojeto1
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=dbprojeto1
+
+
+#spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.url=jdbc:mysql://localhost:3306/dbprojeto1
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
